--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
         JF_USER: admin
         JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
     - run: |
-        jf rt u "target/onlinebookstore-0.0.1-SNAPSHOT.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT.jar/onlinebookstore-0.0.1-SNAPSHOT.jar"
+        jf rt u "target/webapp-runner-*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/"
